# CPCodes

./: .gitignore  CF916C.cpp  CMakeLists.txt  README.md
codewars/: DuplicateEncoder.cpp  aretheythesame.c  consecfibproduct.c  countipaddresses.c  linkedlist.h  longestConsec.cpp  queueTime.cpp  trailingzeros.c  whicharein.c  xoxo.cpp
cpp/: CF894A.cpp  CF894B.cpp  CF894C.cpp  CF895A.cpp  CF895B.cpp  CF895C.cpp  CF898A.cpp  CF898B.cpp  CF898C.cpp  CF898D.cpp  CF898E.cpp  CF898F.cpp  CF898H.cpp  CF900A.cpp  CF900B.cpp  CF900C.cpp  CF900D.cpp  CF916A.cpp  CF916B.cpp  CF916D.cpp  CF918A.cpp  CF918B.cpp  CF918C.cpp  CF918D.cpp  CF918E.cpp  CF918F.cpp  CF974A.cpp  CF974B.cpp  CF974C.cpp  CF974D.cpp  baseCF.cpp  boa01.cpp  boa02.cpp  hackerrank_test1.cpp  kattis_10kindsofpeople.cpp  kattis_1dfroggereasy.cpp  kattis_1dfroggerhard.cpp  kattis_aboveaverage.cpp  kattis_absurdistan3.cpp  kattis_adolescentarchitecture.cpp  (+18 more)
cpp/premade/: prime.cpp
src/: AL01.java  Alt01.java  BFS.java  BinarySearches.java  CF140A.java  CF140B.java  CF142A.java  CF142B.java  CF1691A.java  CF1746A.java  CF1746B.java  CF751E.java  CF794A.java  CF797A.java  CF797B.java  CF799A.java  CF799B.java  CF799C.java  CF799D.java  CF799E.java  CF799F.java  CF827A.java  CF827B.java  CF827C.java  CF827D.java  CF827E.java  CF828A.java  CF828B.java  CF828C.java  CF828D.java  CF839A.java  CF839B.java  CF839C.java  CF839D.java  CF847A.java  CF847B.java  CF847C.java  CF847D.java  CF___X.java  EvenString.java  (+14 more)
src/bd/: Solution.java  bd01.java  bd02.java  bd03.java
